Eduction work experience api intigration

--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -1,7 +1,7 @@
 .login{
     margin-top: 2rem;
-    background-color: gray;
-    padding: 1rem;
+    background-color: rgb(225, 241, 250);
+    padding: 0.5rem;
     border-radius: 100px;
     margin-right: 2px;
     margin-bottom: 2px;
